--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="formularz">
             <form id="formularz">
             <p>Wpisz tekst grecki:</p>
-            <textarea id="tekst" placeholder="Tekst" name="Tekst" rows="5"></textarea><br><br>
+            <textarea id="tekst" placeholder="Tekst grecki" name="Tekst" rows="5"></textarea><br><br>
             <button class="oblicz">Oblicz</button>
             </form>
         </div>
