--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf8">
@@ -8,20 +8,23 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <div id="header">
-        <b>Liczbowanie Biblijne</b>
-    </div><br /><br />
-    <div id="container">
-        <div class="formularz">
-            <form id="formularz">
-            <p>Wpisz tekst grecki:</p>
-            <textarea id="tekst" placeholder="Tekst grecki" name="Tekst" rows="5"></textarea><br><br>
-            <button class="oblicz">Oblicz</button>
-            </form>
-        </div>
-        <br /><br />
-        <div id="wynik" class="wynik">
-            
+    <div class="background"></div>
+    <div class=content>
+        <div id="header">
+            <b>Liczbowanie Biblijne</b>
+        </div><br /><br />
+        <div id="container">
+            <div class="formularz">
+                <form id="formularz">
+                <p>Wpisz tekst grecki:</p>
+                <textarea id="tekst" placeholder="Tekst grecki" name="Tekst" rows="5"></textarea><br><br>
+                <button class="oblicz">Oblicz</button>
+                </form>
+            </div>
+            <br /><br />
+            <div id="wynik" class="wynik">
+                
+            </div>
         </div>
     </div>
 </body>
