--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div id="container">
             <div class="formularz">
                 <form id="formularz">
-                <p>Wpisz tekst grecki:</p>
-                <textarea id="tekst" placeholder="Tekst grecki" name="Tekst" rows="5"></textarea><br><br>
+                <div>Wpisz tekst grecki:</div><br />
+                <textarea id="tekst" placeholder="Tekst grecki" name="Tekst" rows="7"></textarea><br><br>
                 <button class="oblicz">Oblicz</button>
                 </form>
             </div>
